<resources>
    <string name="app_name">sWAPper</string>
    <string name="name_text">Name</string>
    <string name="forget_btn">Forget this network</string>
    <string name="join_btn">Join this network</string>
    <string name="join_btn2">Join</string>
    <string name="block_btn">Block this network</string>
    <string name="join_sw">Auto join</string>
    <string name="ip_text">IP Address</string>
    <string name="subnet_text">Subnet Mask</string>
    <string name="router_text">Router</string>
    <string name="back_btn">Back</string>
    <string name="settings_btn">Settings</string>
    <string name="password_text">Password</string>
    <string name="cancel_btn">Cancel</string>
    <string name="public_connect_btn">Allow Connection to Public Networks</string>
    <string name="darkmode_btn">Dark Mode</string>
    <string name="search_button">Search button</string>
    <string name="strength_button">Strength button</string>
    <string name="settings_button">Settings button</string>
    <string name="wifi_strengths_dbm">WiFi Strengths (dBm)</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
</resources>