<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_public_connect"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/public_connect_btn"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/btn_darkmode"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/darkmode_btn"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_public_connect" />

    <EditText
        android:id="@+id/txt_scan_frequency"
        android:layout_width="91dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="175dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="163dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Scan Frequency"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="175dp" />

    <EditText
        android:id="@+id/txt_minute"
        android:layout_width="88dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Minutes"
        tools:layout_editor_absoluteX="274dp"
        tools:layout_editor_absoluteY="175dp" />

    <Button
        android:id="@+id/btn_check_database"
        android:layout_width="378dp"
        android:layout_height="47dp"
        android:text="Check Database"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="662dp" />
</androidx.constraintlayout.widget.ConstraintLayout>